Changes fib.cpp to Fib.cpp, at line 14 of poptrie_project/CMakeLists.txt

--- a/modified_sail/CMakeLists.txt
+++ b/modified_sail/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Specify the sources
 add_executable(SAIL
     main.cpp
-    fib.cpp
+    Fib.cpp
 )
 
 # Include directories
